added tests, fixed bugs in BP and array multiplication, updated examples to be runnable in plain JVM local